# dashing

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.adoc  conftest.py  demo.py  minidemo.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
.reuse/: dep5
dashing/: __init__.py  dashing.py
docs/: .gitignore  api.rst  conf.py  developers.rst  getting_started.rst  index.rst
examples/: demo.py
tests/: runner_1.py  test_integ.py
