[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dashing"
authors = [{ name = "Federico Ceratto", email = "federico@debian.org" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"]
dynamic = ["version", "description"]
dependencies = ["blessed~=1.20"]

[project.urls]
Home = "https://github.com/FedericoCeratto/dashing"

[project.optional-dependencies]
dev = [
    "black~=24.0",
    "flake8~=7.0",
    "pre-commit~=3.0",
    "isort~=5.12",
    "flake8-pyproject~=1.2"
]

[tool.flake8]
max-line-length = 88