[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dashing"
authors = [{ name = "Federico Ceratto", email = "federico@debian.org" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"]
dynamic = ["version", "description"]
dependencies = ["blessed~=1.20"]

[project.urls]
Home = "https://github.com/FedericoCeratto/dashing"

[project.optional-dependencies]
dev = [
    "black~=24.0",
    "flake8~=7.0",
    "pre-commit~=3.0",
    "isort~=5.12",
    "flake8-pyproject~=1.2",
    "bump-my-version~=0.18"
]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[[tool.bumpversion.files]]
filename = "dashing/__init__.py"